syntax = "proto3";

package addons_service;
option go_package = "github.com/igor-tonkopryadchenko/store/addons_service";

import "domain/addons_v1.proto";
import "google/api/client.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service AddonsService {
  rpc UpdateSection(UpdateSectionRequest) returns (NoResponse) {
      option (google.api.http) = {
        put: "/v1/addons/section/{handle}",
	body: "update_section"
    };
}
  rpc ListSections(ListSectionsRequest) returns (ListSectionsResponse) {
      // option (google.api.method_signature) = "";

      option (google.api.http) = {
        get: "/v1/addons/sections"
    };
  };
}

message ListSectionsRequest {
  domain.Locale locale = 1;
  domain.YearWeek week = 2;
}

message ListSectionsResponse {
  repeated domain.Section sections = 1;
}

message UpdateSection {
  uint32 index = 2 [(validate.rules).uint32 = {gt:0, lt: 2030}];
  string description = 5;
  string image_uri = 6;
}

message UpdateSectionRequest {
  string handle = 1;
  UpdateSection update_section = 3;
}

message NoResponse {}
